--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "max-cucer-job",
   "version": "0.1.0",
-  "homepage": "https://maximka65.github.com/test_web",
+  "homepage": "https://maximka65.github.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -18,10 +18,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
